<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Menu.TranslateActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTraslate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/txtSourceTraslate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnTranslate"
        android:id="@+id/btnTranslate"
        android:layout_below="@+id/txtTraslate"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtResult"
        android:id="@+id/txtResult"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnTranslate"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/txtResult">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtENtoES"
            android:id="@+id/rdENtoES"
            android:layout_below="@+id/rdEStoEN"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdEStoEN"
            android:id="@+id/rdEStoEN"
            android:layout_below="@+id/btnTranslate"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>
</RelativeLayout>
